# cmakepresets

./: .git-blame-ignore-revs  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: release-please-config.json
.github/workflows/: publish.yml  reusable-test.yml  test.yml
src/cmakepresets/: __init__.py  cli.py  constants.py  exceptions.py  log.py  macros.py  parser.py  paths.py  presets.py  schema.py  utils.py
src/cmakepresets/data/: schema.json
tests/: __init__.py  decorators.py  test_cli.py  test_logger.py  test_macros.py  test_parser.py  test_paths.py  test_presets.py  test_schema.py  test_schema_fallback.py  test_utils.py
